prevent visibility page until full loading

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -98,3 +98,4 @@ article{
 	color:#e0e0e0;
 	font-size:15px;
 }
+html { visibility:hidden; }
